@@ -146,6 +146,7 @@
 				<artifactId>ibis-adapterframework-aspose</artifactId>
 				<version>7.7-SNAPSHOT</version>
 			</dependency>
+
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-core</artifactId>
@@ -157,12 +158,25 @@
 				<artifactId>log4j-web</artifactId>
 				<version>${log4j2.version}</version>
 			</dependency>
-			<!-- LOG4J SLF4J bridge -->
+			<!-- SLF4J Binding -->
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-slf4j-impl</artifactId>
 				<version>${log4j2.version}</version>
 			</dependency>
+			<!-- Apache Commons Logging Binding-->
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-jcl</artifactId>
+				<version>${log4j2.version}</version>
+			</dependency>
+			<!-- Java Util Logging Binding-->
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-jul</artifactId>
+				<version>${log4j2.version}</version>
+			</dependency>
+
 			<dependency>
 				<groupId>javax.ejb</groupId>
 				<artifactId>ejb-api</artifactId>
@@ -339,6 +353,20 @@
 
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.8.1</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>3.2.2</version>
+				</plugin>
 				<plugin>
 					<groupId>org.projectlombok</groupId>
 					<artifactId>lombok-maven-plugin</artifactId>
@@ -590,6 +618,7 @@
 				<property>
 					<name>!no-default-modules</name>
 				</property>
+				<jdk>!11</jdk>
 			</activation>
 			<modules>
 				<module>core</module>
@@ -701,6 +730,16 @@
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
+			<pluginRepositories>
+				<pluginRepository>
+					<id>ibissource</id>
+					<url>https://nexus.ibissource.org/content/groups/public</url>
+					<snapshots>
+						<enabled>true</enabled>
+						<updatePolicy>always</updatePolicy>
+					</snapshots>
+				</pluginRepository>
+			</pluginRepositories>
 			<build>
 				<plugins>
 					<plugin>
@@ -794,6 +833,52 @@
 					</plugin>
 				</plugins>
 			</reporting>
+		</profile>
+		<profile>
+			<id>jdk11</id>
+			<properties>
+				<no-default-modules/>
+			</properties>
+			<activation>
+				<jdk>11</jdk>
+			</activation>
+			<modules>
+				<module>core</module>
+				<module>webapp</module>
+				<module>ear</module>
+				<module>larva</module>
+				<module>ladybug</module>
+				<module>test</module>
+				<module>akamai</module>
+				<module>example</module>
+				<module>credentialProvider</module>
+			</modules>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.8.1</version>
+						<configuration>
+							<release>11</release>
+						</configuration>
+					</plugin>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.22.2</version>
+						<configuration>
+							<redirectTestOutputToFile>true</redirectTestOutputToFile>
+							<reuseForks>true</reuseForks>
+							<includes>
+								<include>**/*.java</include>
+							</includes>
+							<excludes>
+								<exclude>it.**</exclude>
+							</excludes>
+							<argLine>@{argLine} -Dfile.encoding=CP-1252 --illegal-access=permit</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 </project>
